--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -6,7 +6,7 @@
 <div class="col-md-8">
     <div class="form-group">
         <input type="text" placeholder="Search By Name" id="search" 
-        class="form-control" [(ngModel)]="nameSerach" >
+        class="form-control"  >
     </div>
     <div class="col-md-8">
 
@@ -20,7 +20,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let product of productArr | filter:nameSerach ">
+              <tr *ngFor="let product of productArr ">
                 <th scope="row">{{product.sno}}</th>
                 <td>{{product.name}}</td>
                 <td>{{product.price}}</td>
